--- a/index.html
+++ b/index.html
@@ -401,48 +401,36 @@
                         </div>
                         <div class="card-body">
                            
-                           <p>1. Programming and Scripting:</p>
-    <ul>
-        <li>SAP ABAP</li>
-        <li>SQL</li>
-        <li>VBA</li>
-        <li>Python</li>
-    </ul> 
-
-    </div>
-
-    <div class="card-body"> 
-
-    <p>2. Web Development:</p>
-    <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript (basics)</li>
-    </ul>
-
-</div>
-
-    <!-- <h1>3. Data Analysis and Statistical Tools:</h1>
-    <ul>
-        <li>Microsoft Excel</li>
-        <li>VBA Excel</li>
-        <li>SPSS</li>
-        <li>RStudio</li>
-        <li>Tableau</li>
-    </ul>
-
-    <h1>4. Engineering and Design Software:</h1>
-    <ul>
-        <li>SolidWorks</li>
-        <li>AutoCAD</li>
-    </ul>
-
-    <h1>5. Others:</h1>
-    <ul>
-        <li>AnyLogic</li>
-        <li>LaTex</li>
-        <li>Bizagi</li>
-    </ul> -->
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th>Category</th>
+                                        <th>Skills</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>Programming and Scripting</td>
+                                        <td>SAP ABAP, SQL, VBA, Python</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Web Development</td>
+                                        <td>HTML, CSS, JavaScript (basics)</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Data Analysis and Statistical Tools</td>
+                                        <td>Microsoft Excel, VBA Excel, SPSS, RStudio, Tableau</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Engineering and Design Software</td>
+                                        <td>SolidWorks, AutoCAD</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Others</td>
+                                        <td>AnyLogic, LaTex, Bizagi</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         
                         </div>
                     </div>
