--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         </div>
                         <div class="card-body">
                            
-                            <table>
+                            <table class="table-responsive-sm">
                                 <thead>
                                     <tr>
                                         <th>Programming and Scripting</th>
