--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
 
     <section class="section bg-dark py-5">
         <div class="container text-center">
-            <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
+            <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
             <button class="btn bg-primary w-lg" >Download My CV</button>
         </div>
     </section>
@@ -1083,7 +1083,7 @@
                                 <h6 class="d-inline">Email :<br> <span class="text-muted">info@website.com</span></h6>
                             </div>
                         </div> -->
-                        <ul class="social-icons pt-4">
+                        <ul class="social-icons pt-2">
 
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
@@ -1123,7 +1123,7 @@
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
 
     <!-- JohnDoe js -->
-    <script src="assets/js/johndoe.js"></script>
+    <script src="assets/js/mariana.js"></script>
 
 </body>
 </html>
