--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
         </div>
     </section>
 
-    <div class="section contact Network" id="contact">
+    <div class="section contact network" id="contact">
         <!-- <div id="map" class="map"></div> -->
         <div class="container">
             <div class="row">
