--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with JohnDoe landing page.">
+    <meta name="description" content="Mariana website">
     <meta name="author" content="Devcrud">
     <title>Mariana Sousa</title>
     <!-- font icons -->
@@ -13,7 +13,6 @@
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
-    <!-- comentei este codigo que correspondia ao componenres que aparecia de lado -->
     <!-- <a href="components.html" class="btn btn-primary btn-component" data-spy="affix" data-offset-top="600"><i class="ti-shift-left-alt"></i> Components</a> -->
 
     <header class="header">
@@ -1026,14 +1025,14 @@
         </div>
     </section> -->
 
-    <section class="section bg-dark py-5">
+    <section class="section-noborder bg-dark py-5">
         <div class="container text-center">
             <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
             <button class="btn bg-primary w-lg" >Download My CV</button>
         </div>
     </section>
 
-    <div class="section contact network" id="contact">
+    <div class="section noborder contact network" id="contact">
         <!-- <div id="map" class="map"></div> -->
         <div class="container">
             <div class="row">
@@ -1102,7 +1101,7 @@
         </div>
     </div>
     <footer class="footer py-3">
-        <div class="container">
+        <div class="container noborder">
             <p class="small mb-0 text-light">
                 &copy; <script>document.write(new Date().getFullYear())</script> , Mariana Sousa 
             </p>
@@ -1110,14 +1109,14 @@
     </footer>
 
 	<!-- core  -->
-    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <!-- <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script> -->
 
     <!-- bootstrap 3 affix -->
-    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
+    <!-- <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script> -->
 
     <!-- Isotope  -->
-    <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
+    <!-- <script src="assets/vendors/isotope/isotope.pkgd.js"></script> -->
     
     <!-- Google mpas -->
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
