--- a/index.html
+++ b/index.html
@@ -1036,7 +1036,7 @@
         <!-- <div id="map" class="map"></div> -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-8">
+                <div class="col-lg-9">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
                         <form action="">
@@ -1047,7 +1047,7 @@
                                 <input class="form-control" type="email" placeholder="Email *" required>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" id=" placeholder="Message *" rows="7" required></textarea>
+                                <textarea class="form-control" id=" placeholder="Message *" rows="5" required></textarea>
                             </div>
                             <div class="form-group ">
                                 <button type="submit" class="form-control btn btn-primary" >Send Message</button>
@@ -1055,7 +1055,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-3">
                     <div class="contact-info-card">
                         <h4 class="contact-title">Get in touch</h4>
                         <!-- <div class="row mb-2">
@@ -1084,16 +1084,10 @@
                         </div> -->
                         <ul class="social-icons pt-2">
 
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true">99marianasousa@gmail.com</i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul>  
-                            <!-- <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-facebook" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-twitter" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-google" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-instagram" aria-hidden="true"></i></a></li>
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
-                        </ul>  -->
                     </div>
                 </div>
             </div>
