--- a/index.html
+++ b/index.html
@@ -1084,7 +1084,7 @@
                         </div> -->
                         <ul class="social-icons pt-2">
 
-                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true">99marianasousa@gmail.com</i></a></li>
+                            <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul>  
@@ -1103,14 +1103,14 @@
     </footer>
 
 	<!-- core  -->
-    <!-- <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script> -->
+    <script src="assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-    <!-- <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script> -->
+    <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Isotope  -->
-    <!-- <script src="assets/vendors/isotope/isotope.pkgd.js"></script> -->
+    <script src="assets/vendors/isotope/isotope.pkgd.js"></script>
     
     <!-- Google mpas -->
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtme10pzgKSPeJVJrG1O3tjR6lk98o4w8&callback=initMap"></script> -->
