--- a/index.html
+++ b/index.html
@@ -434,17 +434,17 @@
                             </div>
                         </div>
                         <div class="card-body pb-2">
-                           <h6>Portugues</h6>
+                           <p>Portugues</p>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>English</h6>
+                            <p>English</p>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>Spanish</h6>
+                            <p>Spanish</p>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
@@ -1025,14 +1025,14 @@
         </div>
     </section> -->
 
-    <section class="section-noborder bg-dark py-5">
+    <section class="section-noborder bg-dark py-5" id="contact">
         <div class="container text-center">
             <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
             <button class="btn bg-primary w-lg" >Download My CV</button>
         </div>
     </section>
 
-    <div class="section noborder contact network" id="contact">
+    <div class="section noborder contact network" >
         <!-- <div id="map" class="map"></div> -->
         <div class="container">
             <div class="row">
