--- a/index.html
+++ b/index.html
@@ -713,18 +713,20 @@
                             </div>   
                         </div>             
                     </div>
-                    <div class="col-md-6 col-lg-4 Athletics">
+
+                    <!-- <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atlectis2.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlectis2.jpg"></a>
-                                <div class="text-holder">
+                                <div class="text-holder"> -->
                                     <!-- <h6 class="title">WEB</h6>
                                     <p class="subtitle">atletics2</p> -->
-                                </div>
+                                <!-- </div>
                             </div> 
                         </div>                         
-                    </div>
+                    </div> -->
+
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atlectics6.jpg" class="img-fluid" alt="...">
@@ -749,18 +751,20 @@
                             </div> 
                         </div>                         
                     </div>
-                    <div class="col-md-6 col-lg-4 Athletics">
+
+                    <!-- <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atletics4.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics4.jpg"></a>
-                                <div class="text-holder">
+                                <div class="text-holder"> -->
                                     <!-- <h6 class="title">WEB</h6>
                                     <p class="subtitle">atletics4</p> -->
-                                </div>
+                                <!-- </div>
                             </div> 
                         </div>                         
-                    </div>
+                    </div> -->
+
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
