--- a/index.html
+++ b/index.html
@@ -765,18 +765,19 @@
                         </div>                         
                     </div> -->
 
-                    <div class="col-md-6 col-lg-4 Athletics">
+                    <!-- <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
-                                <div class="text-holder">
+                                <div class="text-holder"> -->
                                     <!-- <h6 class="title">WEB</h6>
                                     <p class="subtitle">atletics5</p> -->
-                                </div>
+                                <!-- </div>
                             </div> 
                         </div>                         
-                    </div>
+                    </div> -->
+
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atlectics8.jpeg" class="img-fluid" alt="...">
