--- a/index.html
+++ b/index.html
@@ -449,6 +449,31 @@
                         </div>
                     </div>
 
+                    <div class="col-lg-4">
+
+                        <div class="card">
+                           <div class="card-header">
+                                <div class="pull-left">
+                                    <h4 class="mt-2">Certificaciones</h4>
+                                    <span class="line"></span>  
+                                </div>
+                            </div>
+                            <div class="card-body pb-2">
+                               <p>Portugues</p>
+                                <div class="progress mb-3">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <p>English</p>
+                                <div class="progress mb-3">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                                <p>Spanish</p>
+                                <div class="progress mb-3">
+                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+
                 </div>
             
 
