--- a/index.html
+++ b/index.html
@@ -435,16 +435,16 @@
                             </div>
                         </div>
                         <div class="card-body pb-2">
-                           <p>Portugues</p>
-                            <div class="progress mb-3">
+                           <p class="Languages">Portugues</p>
+                            <div class="progress mb-4">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p>English</p>
-                            <div class="progress mb-3">
+                            <p class="Languages">English</p>
+                            <div class="progress mb-4">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p>Spanish</p>
-                            <div class="progress mb-3">
+                            <p class="Languages">Spanish</p>
+                            <div class="progress mb-4">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
@@ -465,7 +465,7 @@
                                     <li>Leadership - Skills Builder</li>
                                     <li>Six Sigma and the Organization (Advanced) - Coursera</li>
                                     <li>Deep learning for business - Coursera</li>
-                                    <li>Navigating through changes and conflicts in Projects - PMI</li>                          
+                                    <li>Navigating through changes and conflicts in Projects - PMI</li>                        
                                 </ul>
 
                             </div>
