--- a/index.html
+++ b/index.html
@@ -435,23 +435,23 @@
                             </div>
                         </div>
                         <div class="card-body pb-2">
-                           <p class="Languages">Portugues</p>
-                            <div class="progress mb-4">
+                           <p class="languages">Portugues</p>
+                            <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 95%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p class="Languages">English</p>
-                            <div class="progress mb-4">
+                            <p class="languages">English</p>
+                            <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <p class="Languages">Spanish</p>
-                            <div class="progress mb-4">
+                            <p class="languages">Spanish</p>
+                            <div class="progress mb-3">
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                    <div class="col-lg-4">
+                    <div class="col-lg-7">
 
                         <div class="card">
                            <div class="card-header">
@@ -473,6 +473,13 @@
                      </div>
             </div>
 
+        </div>
+    </section>
+
+    <section class="section">
+        <div class="container awards">
+            <h2 class="mb-5"><span class="text-light text-center">Awards</span></h2>
+            <p class="text-light text-center">3rd place in the World Data League 2023 competition</p>
         </div>
     </section>
 
@@ -960,8 +967,8 @@
                             <img src="assets/imgs/cyclones.png" alt="Cyclones">
                         </div>
 
-                        <p>Support in the organization of events, organized by Cyclones Sports, such as the “Manuela Machado Half Marathon”. 
-                        Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events.</p>
+                        <p> Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events. 
+                            Every year I am part of the staff of one of the biggest athletics events in Viana, the Manuela Machado Half Marathon.</p>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6">
