--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
         </div>
     </section>
 
-    <section class="section">
-        <div class="container awards">
+    <section class="section awards">
+        <div class="container">
             <h2 class="mb-5"><span class="text-light text-center">Awards</span></h2>
             <p class="text-light text-center">3rd place in the World Data League 2023 competition</p>
         </div>
