--- a/index.html
+++ b/index.html
@@ -486,7 +486,12 @@
         </div>
     </section>
 
-    
+    <section class="section-noborder bg-dark py-5" id="contact">
+        <div class="container text-center">
+            <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
+            <button class="btn bg-primary w-lg" >Download My CV</button>
+        </div>
+    </section>
 
     <!-- <section class="section bg-dark text-center">
         <div class="container">
