--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </div>
     </section>
 
-    <section class="section awards">
+    <section class="section-noborder awards">
         <div class="container">
             <h2><span class="text-light text-center">Awards</span></h2>
             <h3 class="text-light text-center">3rd place in the World Data League 2023 competition</h3>
@@ -488,7 +488,7 @@
 
     <section class="section-noborder bg-dark py-5" id="contact">
         <div class="container text-center">
-            <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
+            <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
             <button class="btn bg-primary w-lg" >Download My CV</button>
         </div>
     </section>
