--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </div>
     </section>
 
-    <section class="section-noborder awards">
+    <section class="section noborder awards">
         <div class="container">
             <h2><span class="text-light text-center">Awards</span></h2>
             <h3 class="text-light text-center">3rd place in the World Data League 2023 competition</h3>
@@ -486,10 +486,22 @@
         </div>
     </section>
 
-    <section class="section-noborder bg-dark py-5" id="contact">
+    <section class="section noborder bg-dark py-5" id="contact">
         <div class="container text-center">
-            <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2>
-            <button class="btn bg-primary w-lg" >Download My CV</button>
+            <!-- <h3 class="text-light mb-5 font-weight-normal">Resume(CV)</h3>
+            <button class="btn bg-primary w-lg" >Download My CV</button> -->
+
+            <div class="row align-items-center">
+                <div class="col-md-6 col-lg-6">
+                    <h3 class="text-light mb-5 font-weight-normal">Resume(CV)</h3>
+                    <button class="btn bg-primary w-lg" >Download file</button>
+                </div>
+                <div class="col-md-6 col-lg-6">
+                    <h3 class="text-light mb-5 font-weight-normal">Recommendation letters</h3>
+                    <button class="btn bg-primary w-lg" >Download file</button>
+                </div>
+                </div>
+            </div>
         </div>
     </section>
 
