--- a/index.html
+++ b/index.html
@@ -486,18 +486,15 @@
         </div>
     </section>
 
-    <section class="section noborder bg-dark py-5" id="contact">
+    <section class="section noborder files bg-dark py-5" id="contact">
         <div class="container text-center">
-            <!-- <h3 class="text-light mb-5 font-weight-normal">Resume(CV)</h3>
-            <button class="btn bg-primary w-lg" >Download My CV</button> -->
-
             <div class="row align-items-center">
                 <div class="col-md-6 col-lg-6">
-                    <h3 class="text-light mb-5 font-weight-normal">Resume(CV)</h3>
+                    <h4 class="text-light mb-4 font-weight-normal">Resume(CV)</h4>
                     <button class="btn bg-primary w-lg" >Download file</button>
                 </div>
                 <div class="col-md-6 col-lg-6">
-                    <h3 class="text-light mb-5 font-weight-normal">Recommendation letters</h3>
+                    <h4 class="text-light mb-4 font-weight-normal">Recommendation letters</h4>
                     <button class="btn bg-primary w-lg" >Download file</button>
                 </div>
                 </div>
