--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
         </div>
     </section>
 
-    <section class="section noborder files bg-dark py-5" id="contact">
+    <section class="section noborder files bg-dark">
         <div class="container text-center">
             <div class="row align-items-center">
                 <div class="col-md-6 col-lg-6">
