--- a/index.html
+++ b/index.html
@@ -478,11 +478,11 @@
 
     <section class="section noborder awards">
         <div class="container">
-            <h2><span class="text-light text-center">Awards</span></h2>
+            <h2 class="text-light text-center">Awards</h2>
             <h3 class="text-light text-center">3rd place in the World Data League 2023 competition</h3>
             <p class="text-light text-center">Member of the team "CEOS". We finished the international competition in 3rd place among 29 teams of best minds in Data Science.
                 This was an opportunity to learn a lot from top experts, share this experience with great friends
-                (Duarte Rodrigues, Mariana Sousa, Mariana Xavier, Ricardo Brioso) and with people from all parts of the world.</p>
+                (Ana Maria Sousa, Duarte Rodrigues, Mariana Xavier, Ricardo Brioso) and with people from all parts of the world.</p>
         </div>
     </section>
 
