--- a/index.html
+++ b/index.html
@@ -1073,18 +1073,11 @@
         </div>
     </section> -->
 
-    <section class="section-noborder bg-dark py-5" id="contact">
-        <div class="container text-center">
-            <!-- <h2 class="text-light mb-5 font-weight-normal">I Am Available For FreeLance</h2> -->
-            <button class="btn bg-primary w-lg" >Download My CV</button>
-        </div>
-    </section>
-
-    <div class="section noborder contact network" >
+    <!-- <div class="section noborder contact network" > -->
         <!-- <div id="map" class="map"></div> -->
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9">
+        <!-- <div class="container">
+            <div class="row"> -->
+                <!-- <div class="col-lg-9">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
                         <form action="">
@@ -1102,10 +1095,10 @@
                             </div>
                         </form>
                     </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="contact-info-card">
-                        <h4 class="contact-title">Get in touch</h4>
+                </div> -->
+                <!-- <div class="col-lg-3"> -->
+                    <!-- <div class="contact-info-card">
+                        <h4 class="contact-title">Get in touch</h4> -->
                         <!-- <div class="row mb-2">
                             <div class="col-1 pt-1 mr-1">
                                 <i class="ti-mobile icon-md"></i>
@@ -1130,20 +1123,27 @@
                                 <h6 class="d-inline">Email :<br> <span class="text-muted">info@website.com</span></h6>
                             </div>
                         </div> -->
-                        <ul class="social-icons pt-2">
+                        <!-- <ul class="social-icons pt-2">
 
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                             <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
                         </ul>  
-                    </div>
-                </div>
-            </div>
+                    </div> -->
+                <!-- </div> -->
+            <!-- </div>
 
         </div>
-    </div>
-    <footer class="footer py-3">
+    </div> -->
+    <footer class="footer py-3" id="contact">
         <div class="container noborder">
+            <h4 class="contact-title">Get in touch</h4>
+            <ul class="social-icons pt-2">
+
+                <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+            </ul>  
             <p class="small mb-0 text-light">
                 &copy; <script>document.write(new Date().getFullYear())</script> , Mariana Sousa 
             </p>
