--- a/index.html
+++ b/index.html
@@ -1135,16 +1135,16 @@
 
         </div>
     </div> -->
-    <footer class="footer py-3" id="contact">
+    <footer class="footer" id="contact">
         <div class="container noborder">
             <h4 class="contact-title">Get in touch</h4>
-            <ul class="social-icons pt-2">
+            <ul class="social-icons">
 
                 <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
-            <p class="small mb-0 text-light">
+            <p class="text-light">
                 &copy; <script>document.write(new Date().getFullYear())</script> , Mariana Sousa 
             </p>
         </div>
