--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
@@ -1137,7 +1137,7 @@
     </div> -->
     <footer class="footer" id="contact">
         <div class="container noborder">
-            <h4 class="contact-title">Get in touch</h4>
+            <!-- <h4 class="contact-title">Get in touch</h4> -->
             <ul class="social-icons">
 
                 <li class="social-item"><a class="social-link text-dark" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
