--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header class="header">
         <div class="container">
             <ul class="social-icons pt-3">
-                <li class="social-item"><a class="social-link text-light" href="mailto:99marianasousa@gmail.com"><i class="ti-email" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="www.linkedin.com/in/mariana-sousa-4843b7219"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="https://github.com/99Mariana"><i class="ti-github" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="mailto:99marianasousa@gmail.com" target="_blank"><i class="ti-email" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="www.linkedin.com/in/mariana-sousa-4843b7219" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/99Mariana" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
@@ -94,7 +94,7 @@
 
         <p>Throughout this website, I'll guide you to dive a little into my world, and you'll be able to find out more about me. I hope you enjoy it!
            Don't hesitate to contact me, if you're interested or curious to find out more. I'd love to discuss some ideas with you!
-           <a href="#" target="_blank" rel="Contacts"> Contacts</a></p>
+           <a href="https://99mariana.github.io/#contact" rel="Contacts"> Contacts</a></p>
 
         <!-- <h3 class="font-weight-light">Who am I ?</h3> -->
         <!-- <div id="about" class="row about-section">
