--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <ul class="social-icons pt-3">
                 <li class="social-item"><a class="social-link text-light" href="mailto:99marianasousa@gmail.com" target="_blank"><i class="ti-email" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="www.linkedin.com/in/mariana-sousa-4843b7219/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/mariana-sousa-4843b7219/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
                 <li class="social-item"><a class="social-link text-light" href="https://github.com/99Mariana" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <div class="header-content">
