--- a/index.html
+++ b/index.html
@@ -1137,10 +1137,10 @@
     </div> -->
     <footer class="footer" id="contact">
         <div class="container noborder">
-            <ul class="social-icons">
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-email" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
-                <li class="social-item"><a class="social-link text-light" href="#"><i class="ti-github" aria-hidden="true"></i></a></li>
+            <ul class="social-icons pt-3">
+                <li class="social-item"><a class="social-link text-light" href="mailto:99marianasousa@gmail.com" target="_blank"><i class="ti-email" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://www.linkedin.com/in/mariana-sousa-4843b7219/" target="_blank"><i class="ti-linkedin" aria-hidden="true"></i></a></li>
+                <li class="social-item"><a class="social-link text-light" href="https://github.com/99Mariana" target="_blank"><i class="ti-github" aria-hidden="true"></i></a></li>
             </ul>  
             <p class="text-light">
                 &copy; <script>document.write(new Date().getFullYear())</script> , Mariana Sousa 
