--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
         </div>
     </section>
 
-    <section class="section noborders awards">
+    <section class="section noborder awards">
         <div class="container">
             <h2 class="text-light text-center">Awards</h2>
             <p></p>
