--- a/index.html
+++ b/index.html
@@ -228,8 +228,7 @@
                             Lean Six Sigma; BPM Business Process Modeling; 
                             Product Quality Control; Material Requirement Planning (MRP) </p>
                         
-                            <!-- <span class="read-more-link" onclick="toggleReadMore()">Read More</span> -->
-                        <a href="#"><span class="read-more" onclick="toggleReadMore()">Read more </span><i class="ti-angle-double-right"></i></a>
+                        <p><span class="read-more" onclick="toggleReadMore()">Read more<i class="ti-angle-double-right"></i></span></p>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
