--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             Lean Six Sigma; BPM Business Process Modeling; 
                             Product Quality Control; Material Requirement Planning (MRP) </p>
                         
-                        <p><span class="read-more" onclick="toggleReadMore()">Read More</span></p>
+                        <p><span class="read-more" onclick="toggleReadMore(this)">Read More</span></p>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
