--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
                             Product Quality Control; Material Requirement Planning (MRP) </p>
                         
                         <p><span class="read-more" onclick="toggleReadMore(this)">Read More</span></p>
+
+                        <p>
+                            This is the initial content for section 2.
+                            <span class="more-content">Here is the extra content for section 2 that is hidden initially but will be shown when "Read More" is clicked.</span>
+                            <span class="read-more" onclick="toggleReadMore(this)">Read More</span>
+                        </p>
                     </div>
                 </div><!-- end of blog wrapper -->
                 <!-- blog-card -->
