--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             Lean Six Sigma; BPM Business Process Modeling; 
                             Product Quality Control; Material Requirement Planning (MRP) </p>
                         
-                        <p><span class="read-more" onclick="toggleReadMore(this)">Read More</span></p>
+                        <span class="read-more" onclick="toggleReadMore(this)"><p>Read More</p></span>
 
                         <p>
                             This is the initial content for section 2.
