--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             <h4 class="text-light text-center">3rd place in the World Data League 2023 competition</h4>
             <p class="text-light text-center">Member of the team "CEOS". We finished the international competition in 3rd place among 29 teams of best minds in Data Science.
                 This was an opportunity to learn a lot from top experts, share this experience with great friends
-                (Ana Maria Sousa, Duarte Rodrigues, Mariana Xavier, Ricardo Brioso) and with people from all parts of the world.</p>
+                (Ana Maria Sousa, Duarte Rodrigues, Mariana Xavier, Ricardo Brioso) and with people from all over of the world.</p>
         </div>
     </section>
 
