--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
                            <P>LIPOR developed a product from recycled Polypropylene which won an international award from FAMAE.
                               LIPOR wanted to launch its product on the market by establishing a B2B business model.</P>
 
+                           <p>Within the scope of this project, my main responsibilities included:</p>
+
                            <ul>
                               <li>Planning and design of processes related to the company's new product;</li>
                               <li>Supply chain logistical planning, with MRP development;</li>
