--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mariana Sousa</h1>
                 <h6 class="header-mono" >Engineering and Management | IT Consultant </h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Download My CV</button>
+                <a href="assets/docs/CV Mariana.pdf" download="CV Mariana.pdf">
+                  <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Download My CV</button>
+                </a>
+
             </div>
         </div>
     </header>
@@ -514,11 +517,15 @@
             <div class="row align-items-center">
                 <div class="col-md-6 col-lg-6">
                     <h4 class="text-light mb-4 font-weight-normal">Resume(CV)</h4>
-                    <button class="btn bg-primary w-lg" >Download file</button>
+                    <a href="assets/docs/CV Mariana.pdf" download="CV Mariana.pdf">
+                      <button class="btn bg-primary w-lg" >Download file</button>
+                    </a>
                 </div>
                 <div class="col-md-6 col-lg-6">
                     <h4 class="text-light mb-4 font-weight-normal">Recommendation letters</h4>
-                    <button class="btn bg-primary w-lg" >Download file</button>
+                    <a href="assets/docs/Mariana_carta_recomendação.pdf" download="Mariana_carta_recomendação.pdf">
+                       <button class="btn bg-primary w-lg" >Download file</button>
+                    </a>
                 </div>
                 </div>
             </div>
@@ -780,19 +787,6 @@
                         </div>             
                     </div>
 
-                    <!-- <div class="col-md-6 col-lg-4 Athletics">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/atlectis2.jpg" class="img-fluid" alt="...">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atlectis2.jpg"></a>
-                                <div class="text-holder"> -->
-                                    <!-- <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics2</p> -->
-                                <!-- </div>
-                            </div> 
-                        </div>                         
-                    </div> -->
-
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
                             <img src="assets/imgs/atlectics6.jpg" class="img-fluid" alt="...">
@@ -817,32 +811,6 @@
                             </div> 
                         </div>                         
                     </div>
-
-                    <!-- <div class="col-md-6 col-lg-4 Athletics">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/atletics4.jpg" class="img-fluid" alt="...">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atletics4.jpg"></a>
-                                <div class="text-holder"> -->
-                                    <!-- <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics4</p> -->
-                                <!-- </div>
-                            </div> 
-                        </div>                         
-                    </div> -->
-
-                    <!-- <div class="col-md-6 col-lg-4 Athletics">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
-                                <div class="text-holder"> -->
-                                    <!-- <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics5</p> -->
-                                <!-- </div>
-                            </div> 
-                        </div>                         
-                    </div> -->
 
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
