--- a/index.html
+++ b/index.html
@@ -749,16 +749,16 @@
                 </div>
 
                 <div class="descripcion">
-                    <p class="Athletics"> The passion for sports is something that is part of my essence. In the past I competed at federated level in swimming (2009 - 2014) and then in athletics (2013 - 2019). The constant efforts to overcome ourselves every day and the sportsmanship, even among supposed rivals, are what charm me most about the world of sport.
-                        As a federated athlete, I was part of the club founded by a portugues former olympic athlete, Manuela Machado: <a href="https://www.instagram.com/cyclones_sanitop/" target="_blank" rel="CYCLONES">Cyclones Sanitop</a>.</p>
+                    <p class="Athletics"> The passion for sports is something that is part of my essence. In the past, I competed at federated level in swimming (2009 - 2014) and then in athletics (2013 - 2019). The constant efforts to overcome ourselves every day and the sportsmanship, even among supposed rivals, are what charm me most about the world of sports. 
+                        As a federated athlete, I was part of the club founded by a Portuguese former Olympic athlete, Manuela Machado: <a href="https://www.instagram.com/cyclones_sanitop/" target="_blank" rel="CYCLONES">Cyclones Sanitop</a>.</p>
                 </div>
                 <div class="descripcion">
                     <p class="Lindy"> Lindy Hop is a social dance that combines elements of jazz, tap, breakaway, and Charleston, and is known for being energetic, fun, and improvisational. 
-                        Lindy Hop was initially popular among the African American community in Harlem and gained widespread recognition thanks to the film <a href="https://www.youtube.com/watch?v=ahoJReiCaPk" target="_blank" rel="Hellzapoppin">"Hellzapoppin"(1941)</a>. 
+                        Lindy Hop was initially popular among the African American community in Harlem and gained widespread recognition thanks to the movie<a href="https://www.youtube.com/watch?v=ahoJReiCaPk" target="_blank" rel="Hellzapoppin">"Hellzapoppin"(1941)</a>. 
                         I currently have classes and go to some events at  <a href="https://www.instagram.com/botaswing/" target="_blank" rel="botaswing">Bota Swing</a>.</p>
                 </div>
                 <div class="descripcion">
-                    <p class="Drawing"> Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalised gifts to family/friends on special dates. I've been learning more about drawing for myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
+                    <p class="Drawing"> Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalized gifts to family/friends on special dates. I've been learning more about drawing for myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
                 </div>
 
                 <div class="portfolio-container">
